arreglo del boton

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <label for="sugerencias">sugerencias</label><br>
                   <textarea name="sugerencias" id="sugerencias" cols="30" rows="10"></textarea> 
                 </div>
-                <div class="contenido_form">  
+                <div class="preferencias">  
                     <label for="preferencia">¿Quieres recibir información del centro SENA?</label><br>
                     <div><input type="radio" id="preferencia" name="preferencia" required autocomplete>Si</div>
                     <div><input type="radio" id="preferencia" name="preferencia" required autocomplete>No</div>
@@ -72,7 +72,7 @@
                     <label for="">He leído y acepto las politicas de privacidad</label>
                 </div>
                 <div class="submit">
-                <input  id="button" type="button" value="Enviar">
+                <input  id="button" type="submit" value="Enviar">
                 </div>
             </form>
         </section>
