--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
     <header>
         <a class="logo" href=""><img src="img/icono.jfif" alt=""></a>
         <nav>
-                <a href="">INICIO</a>
+                <a href="inicio.html">INICIO</a>
                 <a href="">ESTUDIANTES</a>
-                <a href="">PROFESORES</a> 
+                <a href="profesor.html">PROFESORES</a> 
         </nav>
         <div class="opciones">
             <a href=""><img id="search" src="img/Search.png" alt=""></a>
-            <a href=""><img id="user" src="img/User.png" alt=""></a>
+            <a href="index.html"><img id="user" src="img/User.png" alt=""></a>
         </div>
     </header>
     <main>
         <h1>Registro de profesores</h1>
         <section>
-            <form  action="page.php" method="post">
+            <form  action="profesor.html" method="post">
                 <div class="contenido_form">
                     <label for="name">Nombre</label><br>
-                    <input type="text" id="name" name="nombre" placeholder="name" size="20" required><br><br>
+                    <input type="text" id="name" name="nombre" value="" placeholder="name" size="20" pattern="[A-Za-z ]{1,15}" required><br><br>
                 </div>
                 <div class="contenido_form">
                     <label for="last_name">Apellido</label><br>
-                    <input type="text" id="last_name" name="apellido" placeholder="last_name" size="20" required><br><br>
+                    <input type="text" id="last_name" name="apellido" placeholder="last_name" size="20" pattern="[A-Za-z ]{1,15}" required><br><br>
                 </div>  
                 <div class="contenido_form">    
                     <label for="opciones_id">Tipo de identificación</label><br>
@@ -48,15 +48,15 @@
                 </div><br>     
                 <div class="contenido_form">  
                     <label for="email">Correo Electronico</label><br>
-                    <input type="email" id="email" name="email" placeholder="email" size="20" required><br><br>
+                    <input type="email" id="email" name="email" placeholder="email" size="20"  required><br><br>
                 </div>
                 <div class="contenido_form">  
                     <label for="contrasena">contraseña</label><br>
-                    <input type="password" id="contrasena" name="password" placeholder="password" size="20" required><br><br>
+                    <input type="password" id="contrasena" name="password" placeholder="password" size="20" required ><br><br>
                 </div>
                 <div class="contenido_form">  
                     <label for="telefono">Telefono</label><br>
-                    <input type="tel" id="telefono" name="telefono" placeholder="telefono" size="20" required><br><br>
+                    <input type="number" pattern="[1,99]{10}"  id="telefono" placeholder="number">
                 </div> 
                 <div class="texbox">
                   <label for="sugerencias">sugerencias</label><br>
@@ -72,7 +72,7 @@
                     <label for="">He leído y acepto las politicas de privacidad</label>
                 </div>
                 <div class="submit">
-                <input  id="button" type="submit" value="Enviar">
+                <input id="button" type="submit" value="Enviar">
                 </div>
             </form>
         </section>
