--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <input type="text" id="last_name" name="apellido" placeholder="last_name" size="20" pattern="[A-Za-z ]{1,15}" required><br><br>
                 </div>  
                 <div class="contenido_form">    
-                    <label for="opciones_id">Tipo de identificación</label><br>
+                    <label for="opciones_id" >Tipo de identificación</label><br>
                     <select name="opciones" id="opciones_id"  required>
                         <option value="0" selected="selected" disabled>seleccionar</option>
                         <option value="1">Tarjeta de Identidad</option>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="contenido_form">  
                     <label for="telefono">Telefono</label><br>
-                    <input type="number" pattern="[1,99]{10}"  id="telefono" placeholder="number">
+                    <input type="number" pattern="[1,99]{10}"  id="telefono" placeholder="number" required>
                 </div> 
                 <div class="texbox">
                   <label for="sugerencias">sugerencias</label><br>
